--- a/website/style.css
+++ b/website/style.css
@@ -1,6 +1,7 @@
 /* [Master Stylesheet - v1.0] */
 /* :: 1.0 Import Fonts */
 @import url("https://fonts.googleapis.com/css?family=Archivo+Narrow:400,400i,500,500i,600,600i,700,700i");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 /* :: 2.0 Import All CSS */
 @import url(css/bootstrap.min.css);
 @import url(css/classy-nav.css);
@@ -16,7 +17,7 @@
   padding: 0; }
 
 body {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px; }
 
 h1,
@@ -25,13 +26,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: Poppins, sans-serif;
   color: #000000;
   line-height: 1.3;
   font-weight: 700; }
 
 p {
-  font-family: "Archivo Narrow", sans-serif;
+  font-family: Poppins, sans-serif;
   color: #5f5f5f;
   font-size: 15px;
   line-height: 2;
@@ -47,7 +48,7 @@ a:focus {
   color: #000000;
   font-weight: 700;
   font-size: 16px;
-  font-family: "Archivo Narrow", sans-serif; }
+  font-family: Poppins, sans-serif; }
 
 ul,
 ol {
@@ -59,6 +60,26 @@ ol {
 img {
   height: auto;
   max-width: 100%; }
+
+.youtube-video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.youtube-video-container::after {
+  display: block;
+  content: "";
+  padding-top: 56.25%;
+}
+
+.youtube-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 /* :: 3.1.0 Spacing */
 .mt-15 {
@@ -1449,59 +1470,14 @@ img {
       color: #5f5f5f;
       line-height: 1; }
 
-/* :: 18.0 Contact Area CSS */
-.contact-content {
-  position: relative;
-  z-index: 2; }
-  .contact-content .contact-social-info a {
-    display: inline-block;
-    margin-right: 20px;
-    font-size: 14px;
-    color: #000000; }
-    .contact-content .contact-social-info a:hover, .contact-content .contact-social-info a:focus {
-      color: #232323; }
-  .contact-content .single-contact-info {
-    position: relative;
-    margin-bottom: 20px; }
-    .contact-content .single-contact-info:last-child {
-      margin-bottom: 0; }
-    .contact-content .single-contact-info p {
-      font-size: 15px;
-      margin-bottom: 0; }
-    .contact-content .single-contact-info .icon {
-      -webkit-box-flex: 0;
-      -ms-flex: 0 0 35px;
-      flex: 0 0 35px;
-      max-width: 35px;
-      width: 35px;
-      height: 35px;
-      border: 1px solid #000;
-      text-align: center; }
-      .contact-content .single-contact-info .icon span {
-        font-size: 20px;
-        line-height: 33px; }
+.contact-area {
+  color: #fff;
+  font-size: 16px;
+}
 
-.contact-form-area .form-control {
-  position: relative;
-  z-index: 2;
-  height: 45px;
-  width: 100%;
-  background-color: transparent;
-  font-size: 14px;
-  margin-bottom: 15px;
-  border: none;
-  border-radius: 0;
-  padding: 15px 0;
-  font-style: italic;
-  color: #b3b3b3;
-  border-bottom: 1px solid #000000;
-  -webkit-transition-duration: 500ms;
-  transition-duration: 500ms; }
-  .contact-form-area .form-control:focus {
-    box-shadow: none;
-    border-bottom: 1px solid #000000; }
-.contact-form-area textarea.form-control {
-  height: 160px; }
+.contact-area a {
+  color: #fff !important;
+}
 
 .has-bg-img {
   position: relative;
